test/loop/confidence/errors/comp_errors_3.loop
# Errors in pattern matching functions

func() ->
  x for x in

